--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
+  url_launcher: ^6.3.0
+  google_fonts: ^6.2.1
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
